Using partials for header and footer of the page so that we can include it and display it

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -6,6 +6,8 @@
      <title><%= title%></title>
 </head>
 <body>
-     <h1>Codeial / <%= title %></h1>
+     <%- include('_header')%>
+     <h1>Codeial / Profile Page</h1>
+     <%- include('_footer')%>
 </body>
 </html>
