--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
      <title><%= title %></title>
 </head>
 <body>
-     <h1>Codeial / <%= title %></h1>
+     <%- include('_header')%>
+     <h1>Codeial / Home</h1>
+     <%- include('_footer')%>
 </body>
 </html>
