Used layouts and created a flie in views named layouts.ejs

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,4 @@
+<!-- Partials are the code which are being repeated in all the pages, so we make a seperate file for it and include it in pages we want -->
 <footer>
      Page Footer
 </footer>
