--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title><%= title %></title>
+     <link rel="stylesheet" href="/css/layouts.css">
 </head>
 <body>
      <!-- Layouts are the code which are variable part in pages so we put the variable part in the respective pages and use body in the part which is variable-->
