--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title><%= title %></title>
      <link rel="stylesheet" href="/css/layouts.css">
+     <%- style %>
 </head>
 <body>
      <!-- Layouts are the code which are variable part in pages so we put the variable part in the respective pages and use body in the part which is variable-->
@@ -12,5 +13,7 @@
      <%- include('_header')%>
      <%- body %>
      <%- include('_footer')%>
+
+     <%- script %>
 </body>
 </html>
