add user-sign-up & user-sign-in-page and setup there routes and controllers

--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -1,6 +1,6 @@
 /* Including the styles which are common to all the pages */
 
 body{
-     text-align: center;
+     /* text-align: center; */
      margin: 0;
 }
