styled header and footer using scss

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,8 @@
 <!-- Partials are the code which are being repeated in all the pages, so we make a seperate file for it and include it in pages we want -->
-<footer>
-     Page Footer
+<footer class="footer">
+     <span >&copy; Coding Ninjas. All Rights Reserved</span>
+     <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/users/profile">Profile</a></li>
+     </ul>
 </footer>
