--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,6 @@
 <!-- Partials are the code which are being repeated in all the pages, so we make a seperate file for it and include it in pages we want -->
-<header>
-     Page Header
+<header class="header">
+     <span class="title">codeial</span>
 
      <ul>
           <% if(locals.user) { %>
