--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,13 +5,18 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title><%= title %></title>
      <link rel="stylesheet" href="/css/layouts.css">
+     <link rel="stylesheet" href="/css/header.css">
+     <link rel="stylesheet" href="/css/footer.css">
      <%- style %>
 </head>
 <body>
      <!-- Layouts are the code which are variable part in pages so we put the variable part in the respective pages and use body in the part which is variable-->
      <!-- body is provider by the express-ejs-layout npm library -->
      <%- include('_header')%>
-     <%- body %>
+
+     <main>
+          <%- body %>
+     </main>
      <%- include('_footer')%>
 
      <%- script %>
