--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,9 @@
 <h1>Codeial / Home</h1>
+
+<section id="feed-posts">
+     <h4>Posts</h4>
+     <form action="" id="new-post-form" method="POST">
+          <textarea name="content" id="" cols="30" rows="5" placeholder="Write something....."></textarea>
+          <input type="submit" value="Post">
+     </form>
+</section>
